<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_my_events"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/nav_my_events" />
    <item
        android:id="@+id/nav_qr_code"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/nav_qr_code" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />
    <item
        android:id="@+id/nav_analytics"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/nav_analytics"
        android:visible="false" />
</menu>
